.kubernetes/ostad-app-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-app-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ostad-app-1
  template:
    metadata:
      labels:
        app: ostad-app-1
    spec:
      containers:
      - name: ostad-app-container-1
        image: tutulchakma/chat-app:latest
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: ostad-app-1-service
spec:
  type: NodePort
  selector:
    app: ostad-app-1
  ports:
  - port: 80
    targetPort: 3000
