.kubernetes/ostad-app-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostad-app-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ostad-app-2
  template:
    metadata:
      labels:
        app: ostad-app-2
    spec:
      containers:
      - name: ostad-app-2-container
        image: rafaftahsin/ostad-app:v2
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: ostad-app-2-service
spec:
  type: NodePort
  selector:
    app: ostad-app-2
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30080
